--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,13 @@
-body {
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  color: #0C0000;
+}
+
+body {
   font-family: 'Roboto', sans-serif;
+  background-color: #A9CBE9;
 }
 
 code {
